--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Miniinsta</title>
+    <meta charset="UTF-8">
+    <title>Temel JS</title>
+    <style>
+        body { text-align: center; margin-top: 50px; font-family: sans-serif; }
+        button { padding: 10px 20px; font-size: 18px; cursor: pointer; }
+        #mesaj { margin-top: 20px; font-size: 24px; color: purple; }
+    </style>
 </head>
 <body>
-    <div class="mesaj_kutu" id="mesaj_kutu"></div>
+    <button id="btn">Basma Beni! 💌</button>
+    <div id="mesaj"></div>
 
-    <input type="text" id="input" placeholder="Mesaj yaz...">
-    <button id="btn">Gönder</button>
-
-    
+    <script src="script.js"></script>
 </body>
 </html>
