--- a/index.html
+++ b/index.html
@@ -2,16 +2,10 @@
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
-    <title>Temel JS</title>
-    <style>
-        body { text-align: center; margin-top: 50px; font-family: sans-serif; }
-        button { padding: 10px 20px; font-size: 18px; cursor: pointer; }
-        #mesaj { margin-top: 20px; font-size: 24px; color: purple; }
-    </style>
+    <title>Buton Örneği</title>
 </head>
 <body>
-    <button id="btn">Basma Beni! 💌</button>
-    <div id="mesaj"></div>
+    <button id="btn">Eski Buton</button>
 
     <script src="script.js"></script>
 </body>
