Js: console hatalarım :(

--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <title>Buton Örneği</title>
 </head>
 <body>
-    <button id="btn">Eski Buton</button>
+    <div>
+        <p id="Deneme">Deneme
 
+        </p>
+        <button id="buton1">
+            değiştirmek.
+        </button>
+        <p>selam, bu js ile birazdan değişecek</p>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
