Js düzenlemesi: button Düzelttim.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
         <button id="buton1">
             değiştirmek.
         </button>
-        <p>selam, bu js ile birazdan değişecek</p>
+        <p id="degis">
+            selam, bu js ile birazdan değişecek
+        </p>
+        
+        <button id="buton2">
+            bu da üsttekini değişir :)
+        </button>
     </div>
     <script src="script.js"></script>
 </body>
