--- a/miniinsta.html
+++ b/miniinsta.html
@@ -20,6 +20,8 @@
             bu da üsttekini değişir :)
         </button>
     </div>
+    <p id="mesaj"> selam</p>
+    <div id="kutu"></div>
     <script src="script.js"></script>
 </body>
 </html>
